[package]
name = "axum-ws-rooms"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Room Manager for axum websocket"
repository = "https://github.com/mohammadjavad948/axum-ws-rooms"
keywords = ["axum", "axum-ws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["rt", "sync", "macros"]}
serde_json = "1.0"
serde= { version = "1.0", features = ["derive"] }
futures = "0.3"
uuid = { version = "1.1.2", features = ["v4"] }
