[package]
name = "axum-ws-rooms"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Room Manager for axum websocket"
repository = "https://github.com/mohammadjavad948/axum-ws-rooms"
keywords = ["axum", "axum-ws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.42.0", features = ["rt", "sync", "macros"]}

[dev-dependencies]
tokio = {version = "1.42.0", features = ["rt", "rt-multi-thread", "sync", "macros", "time"]}
